--- a/StaffManagement/View/MainWindow.xaml
+++ b/StaffManagement/View/MainWindow.xaml
@@ -30,14 +30,19 @@
                         <ColumnDefinition/>
                         <ColumnDefinition Width="0.4*"/>
                     </Grid.ColumnDefinitions>
-                    <ListView>
+                    <ListView ItemsSource="{Binding AllEmployees}">
                         <ListView.View>
                             <GridView AllowsColumnReorder="true">
-                                <GridViewColumn Header="Имя" Width="100"/>
-                                <GridViewColumn Header="Фамилия" Width="110" />
-                                <GridViewColumn Header="Отчество" Width="120"/>
-                                <GridViewColumn Header="Должность" Width="120"/>
-                                <GridViewColumn Header="Оклад" Width="100"/>
+                                <GridViewColumn Header="Имя" Width="100"
+                                                DisplayMemberBinding="{Binding Path=Name}"/>
+                                <GridViewColumn Header="Фамилия" Width="110" 
+                                                DisplayMemberBinding="{Binding Path=Surname}"/>
+                                <GridViewColumn Header="Отчество" Width="120"
+                                                DisplayMemberBinding="{Binding Path=Patronymic}"/>
+                                <GridViewColumn Header="Должность" Width="120"
+                                                DisplayMemberBinding="{Binding Path=GetPositionByIdProp.Name}"/>
+                                <GridViewColumn Header="Оклад" Width="100"
+                                                DisplayMemberBinding="{Binding Path=GetPositionByIdProp.Salary}"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
