--- a/StaffManagement/View/AddNewPositionWindow.xaml
+++ b/StaffManagement/View/AddNewPositionWindow.xaml
@@ -19,14 +19,17 @@
         </Grid.RowDefinitions>
         <StackPanel VerticalAlignment="Center" Width="200">
             <TextBlock Text="Name"/>
-            <TextBox Name="NameBlock" Text=""/>
+            <TextBox Name="NameBlock" Text="{Binding NewPositionName}"/>
             <TextBlock Text="Salary"/>
-            <TextBox Name="SalaryBlock" Text=""/>
+            <TextBox Name="SalaryBlock" Text="{Binding NewPositionSalary}"/>
             <TextBlock Text="Max count of staff"/>
-            <TextBox Name="MaxCountOfStuffBlock" Text=""/>
+            <TextBox Name="MaxCountOfStuffBlock" Text="{Binding NewPositionMaxStaff}"/>
             <TextBlock Text="Department"/>
-            <ComboBox/>
+            <ComboBox ItemsSource="{Binding AllDepartments}"
+                      SelectedItem="{Binding NewPositionDepartment}"
+                      DisplayMemberPath="Name"/>
         </StackPanel>
-        <Button Grid.Row="1" Content="Add Position"/>
+        <Button Grid.Row="1" Content="Add Position"
+                Command="{Binding AddNewPositionCommand}"/>
     </Grid>
 </Window>
