--- a/StaffManagement/View/MainWindow.xaml
+++ b/StaffManagement/View/MainWindow.xaml
@@ -33,7 +33,8 @@
                         <ColumnDefinition/>
                         <ColumnDefinition Width="0.4*"/>
                     </Grid.ColumnDefinitions>
-                    <ListView Name="AllEmployeesListView" ItemsSource="{Binding AllEmployees}">
+                    <ListView Name="AllEmployeesListView" ItemsSource="{Binding AllEmployees}"
+                              SelectedItem="{Binding SelectedEmployee}">
                         <ListView.View>
                             <GridView AllowsColumnReorder="true">
                                 <GridViewColumn Header="Фамилия" Width="100"
@@ -54,7 +55,8 @@
                                 Command="{Binding ShowAddNewEmployee}"/>
                         <Button Content="Редактировать" Style="{StaticResource SidePanelButton}"
                                 Command="{Binding ShowEditEmployee}"/>
-                        <Button Content="Удалить" Style="{StaticResource SidePanelButton}"/>
+                        <Button Content="Удалить" Style="{StaticResource SidePanelButton}"
+                                Command="{Binding DeleteEmployee}"/>
                     </StackPanel>
                 </Grid>
                 
@@ -65,7 +67,8 @@
                         <ColumnDefinition/>
                         <ColumnDefinition Width="0.4*"/>
                     </Grid.ColumnDefinitions>
-                    <ListView Name="AllPositionsListView" ItemsSource="{Binding AllPositions}">
+                    <ListView Name="AllPositionsListView" ItemsSource="{Binding AllPositions}"
+                              SelectedItem="{Binding SelectedPosition}">
                         <ListView.View>
                             <GridView AllowsColumnReorder="true" >
                                 <GridViewColumn Header="Название" Width="100"
@@ -87,7 +90,8 @@
                                 Command="{Binding ShowAddNewPosition}"/>
                         <Button Content="Редактировать" Style="{StaticResource SidePanelButton}"
                                 Command="{Binding ShowEditPosition}"/>
-                        <Button Content="Удалить" Style="{StaticResource SidePanelButton}"/>
+                        <Button Content="Удалить" Style="{StaticResource SidePanelButton}"
+                                Command="{Binding DeletePosition}"/>
                     </StackPanel>
                 </Grid>
             </TabItem>
@@ -97,12 +101,13 @@
                         <ColumnDefinition/>
                         <ColumnDefinition Width="0.4*"/>
                     </Grid.ColumnDefinitions>
-                    <ListView Name="AllDepartmentsListView" ItemsSource="{Binding AllDepartments}">
+                    <ListView Name="AllDepartmentsListView" ItemsSource="{Binding AllDepartments}"
+                              SelectedItem="{Binding SelectedDepartment}">
                         <ListView.View>
                             <GridView AllowsColumnReorder="true">
-                                <GridViewColumn Header="Название отдела" Width="150"
+                                <GridViewColumn Header="Название отдела" Width="350"
                                                 DisplayMemberBinding="{Binding Path=Name}"/>
-                                <GridViewColumn Header="Количество должностей" Width="150"
+                                <GridViewColumn Header="Количество должностей" Width="200"
                                                 DisplayMemberBinding="{Binding Path=PositionCount}"/>
                             </GridView>
                         </ListView.View>
@@ -112,7 +117,8 @@
                                 Command="{Binding ShowAddNewDepartment}"/>
                         <Button Content="Редактировать" Style="{StaticResource SidePanelButton}"
                                 Command="{Binding ShowEditDepartment}"/>
-                        <Button Content="Удалить" Style="{StaticResource SidePanelButton}"/>
+                        <Button Content="Удалить" Style="{StaticResource SidePanelButton}"
+                                Command="{Binding DeleteDepartment}"/>
                     </StackPanel>
                 </Grid>
             </TabItem>
