--- a/StaffManagement/View/AddNewDepartmentWindow.xaml
+++ b/StaffManagement/View/AddNewDepartmentWindow.xaml
@@ -8,20 +8,18 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Name="AddNewDepartmentWind"
-        Title="AddNewDepartmentWindow" Height="300" Width="300">
-    <Window.DataContext>
-        <vm:MainViewModel/>
-    </Window.DataContext>
+        Height="300" Width="300"
+        DataContext="{DynamicResource mainViewModel}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <StackPanel VerticalAlignment="Center" Width="200">
-            <TextBlock Text="Name"/>
+            <TextBlock Text="Название"/>
             <TextBox Name="NameBlock" Text="{Binding NewDepartmentName}"/>
         </StackPanel>
-        <Button Grid.Row="1" Content="Add Department"
+        <Button Grid.Row="1" Content="Добавить отдел"
                 Command="{Binding AddNewDepartmentCommand}"/>
     </Grid>
 </Window>
