--- a/StaffManagement/View/AddNewPositionWindow.xaml
+++ b/StaffManagement/View/AddNewPositionWindow.xaml
@@ -7,29 +7,27 @@
         xmlns:vm="clr-namespace:StaffManagement.ViewModel"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="AddNewPositionWindow" Height="300" Width="300"
-        Name="AddNewPositionWnd">
-    <Window.DataContext>
-        <vm:MainViewModel/>
-    </Window.DataContext>
+        Height="300" Width="300"
+        Name="AddNewPositionWnd"
+        DataContext="{DynamicResource mainViewModel}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <StackPanel VerticalAlignment="Center" Width="200">
-            <TextBlock Text="Name"/>
+            <TextBlock Text="Название"/>
             <TextBox Name="NameBlock" Text="{Binding NewPositionName}"/>
-            <TextBlock Text="Salary"/>
+            <TextBlock Text="Оклад"/>
             <TextBox Name="SalaryBlock" Text="{Binding NewPositionSalary}"/>
-            <TextBlock Text="Max count of staff"/>
+            <TextBlock Text="Максимальный штат"/>
             <TextBox Name="MaxCountOfStuffBlock" Text="{Binding NewPositionMaxStaff}"/>
-            <TextBlock Text="Department"/>
+            <TextBlock Text="Отдел"/>
             <ComboBox ItemsSource="{Binding AllDepartments}"
                       SelectedItem="{Binding NewPositionDepartment}"
                       DisplayMemberPath="Name"/>
         </StackPanel>
-        <Button Grid.Row="1" Content="Add Position"
+        <Button Grid.Row="1" Content="Добавить должность"
                 Command="{Binding AddNewPositionCommand}"/>
     </Grid>
 </Window>
