--- a/StaffManagement/View/EditDepartmentWindow.xaml
+++ b/StaffManagement/View/EditDepartmentWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:vm1="clr-namespace:StaffManagement"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="EditDepartmentWindow" Height="300" Width="300"
+        Height="300" Width="300"
         Name="EditDepartmentWnd"
         DataContext="{DynamicResource mainViewModel}"
         >
@@ -18,10 +18,10 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <StackPanel VerticalAlignment="Center" Width="200">
-            <TextBlock Text="New name"/>
+            <TextBlock Text="Новое название отдела"/>
             <TextBox Text="{Binding NewDepartmentName}"/>
         </StackPanel>
-        <Button Grid.Row="1" Content="Edit Department"
+        <Button Grid.Row="1" Content="Редактировать отдел"
                 Command="{Binding EditDepartmentCommand}"/>
     </Grid>
 </Window>
