--- a/StaffManagement/View/AddNewDepartmentWindow.xaml
+++ b/StaffManagement/View/AddNewDepartmentWindow.xaml
@@ -20,6 +20,7 @@
             <TextBox Name="NameBlock" Text="{Binding NewDepartmentName}" />
         </StackPanel>
         <Button Grid.Row="1" Content="Добавить отдел"
-                Command="{Binding AddNewDepartmentCommand}"/>
+                Command="{Binding AddNewDepartmentCommand}"
+                CommandParameter="{Binding ElementName=AddNewDepartmentWind}"/>
     </Grid>
 </Window>
