--- a/StaffManagement/View/AddNewEmployeeWindow.xaml
+++ b/StaffManagement/View/AddNewEmployeeWindow.xaml
@@ -28,6 +28,7 @@
                       SelectedItem="{Binding NewEmployeePosition}"/>
         </StackPanel>
         <Button Grid.Row="1" Content="Добавить сотрудника"
-                Command="{Binding AddNewEmployeeCommand}"/>
+                Command="{Binding AddNewEmployeeCommand}"
+                CommandParameter="{Binding ElementName=AddNewEmployeeWnd}"/>
     </Grid>
 </Window>
