--- a/StaffManagement/View/AddNewPositionWindow.xaml
+++ b/StaffManagement/View/AddNewPositionWindow.xaml
@@ -28,6 +28,7 @@
                       DisplayMemberPath="Name"/>
         </StackPanel>
         <Button Grid.Row="1" Content="Добавить должность"
-                Command="{Binding AddNewPositionCommand}"/>
+                Command="{Binding AddNewPositionCommand}"
+                CommandParameter="{Binding ElementName=AddNewPositionWnd}"/>
     </Grid>
 </Window>
