--- a/StaffManagement/View/EditDepartmentWindow.xaml
+++ b/StaffManagement/View/EditDepartmentWindow.xaml
@@ -22,6 +22,7 @@
             <TextBox Text="{Binding NewDepartmentName}"/>
         </StackPanel>
         <Button Grid.Row="1" Content="Редактировать отдел"
-                Command="{Binding EditDepartmentCommand}"/>
+                Command="{Binding EditDepartmentCommand}"
+                CommandParameter="{Binding ElementName=EditDepartmentWnd}"/>
     </Grid>
 </Window>
