--- a/StaffManagement/View/EditPositionWindow.xaml
+++ b/StaffManagement/View/EditPositionWindow.xaml
@@ -28,6 +28,7 @@
                       DisplayMemberPath="Name"/>
         </StackPanel>
         <Button Grid.Row="1" Content="Редактировать позицию"
-                Command="{Binding EditPositionCommand}"/>
+                Command="{Binding EditPositionCommand}"
+                CommandParameter="{Binding ElementName=EditPositionWnd}"/>
     </Grid>
 </Window>
